@@ -1,11 +1,15 @@
 partman-partitioning (65) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Merge from Ubuntu:
     - Exit straight away if a called script is killed by a signal.
     - Add lpia support to default_disk_label (Emmet Hikory).
     - Add ext4 support.
     - Honour partman/default_filesystem when creating new partitions.
       Requires partman-base 129.
+
+  [ Riku Voipio ]
+  * Consolidate ARM partitioning.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 26 Dec 2008 14:39:09 +0000
 
